// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` Logo with domain renders correctly 1`] = `
<div
  className="flex items-center space-x-2"
>
  <svg
    className="h-6 text-gray-900 stroke-current"
    fill="none"
    viewBox="0 0 194 148"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 106.208L97.3883 17.8199L134.158 54.5894M185.07 41.8615L96.6814 130.25L59.9118 93.4803"
      strokeWidth="25"
    />
  </svg>
  <div
    className="text-xl font-semibold"
  >
    <span
      className="text-gray-800"
    >
      PERFOLIO
    </span>
    <span
      className="uppercase text-blue-500"
    >
      domain
    </span>
  </div>
</div>
`;

exports[` Logo without domain renders correctly 1`] = `
<div
  className="flex items-center space-x-2"
>
  <svg
    className="h-6 text-gray-900 stroke-current"
    fill="none"
    viewBox="0 0 194 148"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 106.208L97.3883 17.8199L134.158 54.5894M185.07 41.8615L96.6814 130.25L59.9118 93.4803"
      strokeWidth="25"
    />
  </svg>
  <div
    className="text-xl font-semibold"
  >
    <span
      className="text-gray-800"
    >
      PERFOLIO
    </span>
  </div>
</div>
`;
